--- a/playbooks/gce/openshift-cluster/launch.yml
+++ b/playbooks/gce/openshift-cluster/launch.yml
@@ -61,3 +61,5 @@
   vars:
     oo_host_group_exp: "groups[\"tag_env-host-type-{{ cluster_id }}-openshift-node\"]"
     oo_env: "{{ cluster_id }}"
+
+- include: list.yml
