--- a/roles/yum_repos/meta/main.yml
+++ b/roles/yum_repos/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
   author: openshift operations
-  description: 
-  company: RedHat
+  description:
+  company: Red Hat, Inc.
   license: ASL 2.0
   min_ansible_version: 1.2
 dependencies: []
