--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -156,7 +156,7 @@
   register: start_result
 
 - set_fact:
-    skip_master_restart = start_result | changed
+    master_service_status_changed = start_result | changed
 
 - name: Install cluster packages
   yum: pkg=pcs state=present
