--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -129,4 +129,4 @@
   register: start_result
 
 - set_fact:
-    skip_node_restart = start_result | changed
+    node_service_status_changed = start_result | changed
