Fixes typo assigning docker_service_status_changed which leads to misinterpretation in handler.
Fixes Docker restart handling to ensure openshift_docker role does restart Docker on change.

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -12,7 +12,7 @@
   register: start_result
 
 - set_fact:
-    docker_service_status_changed = start_result | changed
+    docker_service_status_changed: start_result | changed
 
 - include: udev_workaround.yml
   when: docker_udev_workaround | default(False)
