Make bin/cluster able to spawn OSE 3.1 clusters

--- a/roles/rhel_subscribe/tasks/main.yml
+++ b/roles/rhel_subscribe/tasks/main.yml
@@ -33,4 +33,4 @@
     autosubscribe: yes
 
 - include: enterprise.yml
-  when: deployment_type == 'enterprise'
+  when: deployment_type in [ 'enterprise', 'atomic-enterprise', 'openshift-enterprise' ]
