--- a/playbooks/gce/openshift-cluster/config.yml
+++ b/playbooks/gce/openshift-cluster/config.yml
@@ -6,7 +6,7 @@
   - ../../gce/openshift-cluster/vars.yml
   - ../../gce/openshift-cluster/cluster_hosts.yml
   vars:
-    g_ssh_user: "{{ deployment_vars[deployment_type].ssh_user }}"
+    g_ssh_user: "{{ lookup('env', 'gce_ssh_user') | default(deployment_vars[deployment_type].ssh_user, true) }}"
     g_sudo: "{{ deployment_vars[deployment_type].sudo }}"
     g_nodeonmaster: true
     openshift_cluster_id: "{{ cluster_id }}"
@@ -14,5 +14,6 @@
     openshift_deployment_type: "{{ deployment_type }}"
     openshift_hostname: "{{ gce_private_ip }}"
     openshift_use_openshift_sdn: "{{ do_we_use_openshift_sdn }}"
+    os_sdn_network_plugin_name: "{{ sdn_network_plugin }}"
     openshift_router_selector: 'type=infra'
     osm_infra_nodes: "{{ g_infra_hosts }}"
