--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -42,7 +42,12 @@
       public_console_url: "{{ openshift_master_public_console_url | default(None) }}"
       logging_public_url: "{{ openshift_master_logging_public_url | default(None) }}"
       metrics_public_url: "{{ openshift_master_metrics_public_url | default(None) }}"
-      etcd_hosts: "{{ openshift_master_etcd_hosts | default(None)}}"
+      logout_url: "{{ openshift_master_logout_url | default(None) }}"
+      extension_scripts: "{{ openshift_master_extension_scripts | default(None) }}"
+      extension_stylesheets: "{{ openshift_master_extension_stylesheets | default(None) }}"
+      extensions: "{{ openshift_master_extensions | default(None) }}"
+      oauth_template: "{{ openshift_master_oauth_template | default(None) }}"
+      etcd_hosts: "{{ openshift_master_etcd_hosts | default(None) }}"
       etcd_port: "{{ openshift_master_etcd_port | default(None) }}"
       etcd_use_ssl: "{{ openshift_master_etcd_use_ssl | default(None) }}"
       etcd_urls: "{{ openshift_master_etcd_urls | default(None) }}"
